# invisible_ai

./: CMakeLists.txt  README.md
data/: NOTE.txt
src/: SIFT.cpp  cornerHarris.cpp  mfd-2.cpp  multiFeatureDetection.cpp  playVideo.cpp
src/old/: canny.cpp  multiFeatureDetection.cpp.WORKING  multiFeatureDetection.cpp.bak  multiFeatureDetection.cpp.cool.not.working
